--- a/index.html
+++ b/index.html
@@ -1,43 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta
-      name="viewport"
-      content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
-    />
-
-    <title>Cubefield</title>
-
-    <link rel="stylesheet" href="assets/app.css" type="text/css" />
-    <link rel="icon" href="assets/unnamed.png" />
-  </head>
-  <body>
-    <div id="gameContainer"></div>
-    <div id="gui"></div>
-
-    <script type="text/javascript">
-      var gameName = "cubefield.min.js";
-
-      //This all here is for cache busting;
-      function addScript(src, buster, callback) {
-        var s = document.createElement("script");
-        s.setAttribute("src", src + "?v=" + buster);
-        if (typeof callback === "function") {
-          s.onload = callback;
-        }
-        document.body.appendChild(s);
-      }
-
-      addScript("version.js", Date.now(), function () {
-        addScript(gameName, version, function () {
-          /**
-           * Here we create the game
-           */
-          ga = () => {};
-        });
-      });
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Cubefield</title><link rel="stylesheet" href="assets/app.css" type="text/css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="gameContainer"></div><div id="gui"></div><script type="text/javascript">var gameName="cubefield.min.js"; function addScript(src, buster, callback){ var s=document.createElement("script"); s.setAttribute("src", src + "?v=" + buster); if (typeof callback==="function"){ s.onload=callback;} document.body.appendChild(s);} addScript("version.js", Date.now(), function (){ addScript(gameName, version, function (){ ga=()=>{};});}); </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
