--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>A Dance of Fire And Ice</title>
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-      var gameInstance = UnityLoader.instantiate(
-        "gameContainer",
-        "Build/adofaiii4.json"
-      );
-    </script>
-  </head>
-  <body style="margin: 0px; overflow: hidden">
-    <div
-      id="gameContainer"
-      style="
-        width: 800px;
-        height: 400px;
-        margin: auto;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-      "
-    ></div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>A Dance of Fire And Ice</title><script src="Build/UnityLoader.js"></script><script>var gameInstance=UnityLoader.instantiate( "gameContainer", "Build/adofaiii4.json" ); </script><link rel="stylesheet" href="toast.css" /></head><body style="margin: 0px; overflow: hidden"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="gameContainer" style=" width: 800px; height: 400px; margin: auto; position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); " ></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
