--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Doodle Jump</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <canvas id="canvas">Aww, your browser doesn't support HTML5!</canvas>
-      <div id="mainMenu">
-        <h1>doodle jump</h1>
-        <h3>using HTML5,</h3>
-
-        <p class="info">
-          use <span class="key left">←</span>
-          <span class="key right">→</span> to move and space to (re) start...
-        </p>
-        <a class="button" href="javascript:init()">Play</a>
-      </div>
-      <div id="gameOverMenu">
-        <h1>game over!</h1>
-        <h3 id="go_score">you scored 0 points</h3>
-        <a class="button" href="javascript:reset()">Restart</a>
-      </div>
-      <img id="sprite" src="sprites.png" />
-      <div id="scoreBoard">
-        <p id="score">0</p>
-      </div>
-    </div>
-    <script src="main.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><title>Doodle Jump</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="style.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="container"><canvas id="canvas">Aww, your browser doesn't support HTML5!</canvas><div id="mainMenu"><h1>doodle jump</h1><h3>using HTML5,</h3><p class="info">use <span class="key left">←</span><span class="key right">→</span>to move and space to (re) start... </p><a class="button" href="javascript:init()">Play</a></div><div id="gameOverMenu"><h1>game over!</h1><h3 id="go_score">you scored 0 points</h3><a class="button" href="javascript:reset()">Restart</a></div><img id="sprite" src="sprites.png" /><div id="scoreBoard"><p id="score">0</p></div></div><script src="main.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
