--- a/index.html
+++ b/index.html
@@ -1,55 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Elastic Face</title>
-    <link rel="stylesheet" href="app.css" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-  </head>
-  <body>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <script type="text/template" id="loading-template">
-      <div id="loading-bar" class="loading-bar-visible">
-          <div id="loading-fill"></div>
-      </div>
-    </script>
-    <script type="text/template" id="no-support-template">
-      <div id="error">Your browser does not support the required features. Try another browser and/or device!</div>
-    </script>
-    <script type="text/template" id="main-template">
-      <div id="quality-container">
-          <div id="quality-label">Quality</div>
-          <div class="quality" id="quality-medium">Medium</div>
-          <div class="quality" id="quality-high">High</div>
-      </div>
-    </script>
-    <div id="placeholder"></div>
-    <script src="popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><title>Elastic Face</title><link rel="stylesheet" href="app.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><script type="text/template" id="loading-template"><div id="loading-bar" class="loading-bar-visible"><div id="loading-fill"></div></div></script><script type="text/template" id="no-support-template"><div id="error">Your browser does not support the required features. Try another browser and/or device!</div></script><script type="text/template" id="main-template"><div id="quality-container"><div id="quality-label">Quality</div><div class="quality" id="quality-medium">Medium</div><div class="quality" id="quality-high">High</div></div></script><div id="placeholder"></div><script src="popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
