--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Evade</title>
-  </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0">
-    <canvas
-      id="unity-canvas"
-      width="512"
-      height="512"
-      style="width: 512px; height: 512px; background: #000000"
-    ></canvas>
-    <script src="Build/itchio.loader.js"></script>
-    <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement("meta");
-        meta.name = "viewport";
-        meta.content =
-          "width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes";
-        document.getElementsByTagName("head")[0].appendChild(meta);
-
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
-
-        document.body.style.textAlign = "left";
-      }
-
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/itchio.data",
-        frameworkUrl: "Build/itchio.framework.js",
-        codeUrl: "Build/itchio.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "",
-        productName: "Evade",
-        productVersion: "1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Evade</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="toast.css" /></head><body style="text-align: center; padding: 0; border: 0; margin: 0"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas id="unity-canvas" width="512" height="512" style="width: 512px; height: 512px; background: #000000" ></canvas><script src="Build/itchio.loader.js"></script><script>if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)){ var meta=document.createElement("meta"); meta.name="viewport"; meta.content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes"; document.getElementsByTagName("head")[0].appendChild(meta); var canvas=document.querySelector("#unity-canvas"); canvas.style.width="100%"; canvas.style.height="100%"; canvas.style.position="fixed"; document.body.style.textAlign="left";} createUnityInstance(document.querySelector("#unity-canvas"),{ dataUrl: "Build/itchio.data", frameworkUrl: "Build/itchio.framework.js", codeUrl: "Build/itchio.wasm", streamingAssetsUrl: "StreamingAssets", companyName: "", productName: "Evade", productVersion: "1.0",}); </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
