--- a/index.html
+++ b/index.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Floppy Bird</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-    <meta
-      name="description"
-      content="play floppy bird. a remake of popular game flappy bird built in html/css/js"
-    />
-    <meta
-      name="keywords"
-      content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
-
-    <!-- Open Graph tags -->
-    <meta property="og:title" content="Floppy Bird" />
-    <meta
-      property="og:description"
-      content="play floppy bird. a remake of popular game flappy bird built in html/css/js"
-    />
-    <meta property="og:site_name" content="Floppy Bird" />
-
-    <!-- Style sheets -->
-    <link href="css/reset.css" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="gamecontainer">
-      <div id="gamescreen">
-        <div id="sky" class="animated">
-          <div id="flyarea">
-            <div id="ceiling" class="animated"></div>
-            <!-- This is the flying and pipe area container -->
-            <div id="player" class="bird animated"></div>
-
-            <div id="bigscore"></div>
-
-            <div id="splash"></div>
-
-            <div id="scoreboard">
-              <div id="medal"></div>
-              <div id="currentscore"></div>
-              <div id="highscore"></div>
-              <div id="replay">
-                <img src="assets/replay.png" alt="replay" />
-              </div>
-            </div>
-
-            <!-- Pipes go here! -->
-          </div>
-        </div>
-        <div id="land" class="animated"><div id="debug"></div></div>
-      </div>
-    </div>
-    <div class="boundingbox" id="playerbox"></div>
-    <div class="boundingbox" id="pipebox"></div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.transit.min.js"></script>
-    <script src="js/buzz.min.js"></script>
-    <script src="js/main.js"></script>
-
-    <script>
-      function inIframe() {
-        try {
-          return window.self !== window.top;
-        } catch (e) {
-          return true;
-        }
-      }
-      if (!inIframe() && window.location.hostname == "nebezb.com") {
-        window.ga =
-          window.ga ||
-          function () {
-            (ga.q = ga.q || []).push(arguments);
-          };
-        ga.l = +new Date();
-        ga("create", "UA-48047334-1", "auto");
-        ga("send", "pageview");
-      }
-    </script>
-    <script async src="https://www.google-analytics.com/analytics.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Floppy Bird</title><meta http-equiv="content-type" content="text/html; charset=utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link href="css/reset.css" rel="stylesheet" /><link href="css/main.css" rel="stylesheet" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="gamecontainer"><div id="gamescreen"><div id="sky" class="animated"><div id="flyarea"><div id="ceiling" class="animated"></div><div id="player" class="bird animated"></div><div id="bigscore"></div><div id="splash"></div><div id="scoreboard"><div id="medal"></div><div id="currentscore"></div><div id="highscore"></div><div id="replay"><img src="assets/replay.png" alt="replay" /></div></div></div></div><div id="land" class="animated"><div id="debug"></div></div></div></div><div class="boundingbox" id="playerbox"></div><div class="boundingbox" id="pipebox"></div><script src="js/jquery.min.js"></script><script src="js/jquery.transit.min.js"></script><script src="js/buzz.min.js"></script><script src="js/main.js"></script><script>function inIframe(){ try{ return window.self !==window.top;} catch (e){ return true;}} if (!inIframe() && window.location.hostname=="nebezb.com"){ window.ga=window.ga || function (){ (ga.q=ga.q || []).push(arguments);}; ga.l=+new Date(); ga("create", "UA-48047334-1", "auto"); ga("send", "pageview");} </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
