--- a/index.html
+++ b/index.html
@@ -1,75 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
-    />
-    <title>Game Inside a Game</title>
-    <link rel="icon" href="img/icon.png" />
-    <link rel="shortcut icon" href="img/icon.png" />
-    <link rel="stylesheet" href="TemplateData/style.css" />
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-footer">
-        <div id="unity-fullscreen-button"></div>
-      </div>
-    </div>
-    <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webv0_2d.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/webv0_2d.data",
-        frameworkUrl: buildUrl + "/webv0_2d.framework.js",
-        codeUrl: buildUrl + "/webv0_2d.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "Sam Hogan",
-        productName: "Game Inside a Game",
-        productVersion: "0.2",
-      };
-
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        container.className = "unity-mobile";
-        config.devicePixelRatio = 1;
-      } else {
-        canvas.style.width = "960px";
-        canvas.style.height = "540px";
-      }
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        })
-          .then((unityInstance) => {
-            loadingBar.style.display = "none";
-            fullscreenButton.onclick = () => {
-              unityInstance.SetFullscreen(1);
-            };
-          })
-          .catch((message) => {
-            alert(message);
-          });
-      };
-      document.body.appendChild(script);
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Game Inside a Game</title><link rel="stylesheet" href="TemplateData/style.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="unity-container" class="unity-desktop"><canvas id="unity-canvas"></canvas><div id="unity-loading-bar"><div id="unity-logo"></div><div id="unity-progress-bar-empty"><div id="unity-progress-bar-full"></div></div></div><div id="unity-footer"><div id="unity-fullscreen-button"></div></div></div><script>var buildUrl="Build"; var loaderUrl=buildUrl + "/webv0_2d.loader.js"; var config={ dataUrl: buildUrl + "/webv0_2d.data", frameworkUrl: buildUrl + "/webv0_2d.framework.js", codeUrl: buildUrl + "/webv0_2d.wasm", streamingAssetsUrl: "StreamingAssets", companyName: "Sam Hogan", productName: "Game Inside a Game", productVersion: "0.2",}; var container=document.querySelector("#unity-container"); var canvas=document.querySelector("#unity-canvas"); var loadingBar=document.querySelector("#unity-loading-bar"); var progressBarFull=document.querySelector("#unity-progress-bar-full"); var fullscreenButton=document.querySelector("#unity-fullscreen-button"); if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)){ container.className="unity-mobile"; config.devicePixelRatio=1;} else{ canvas.style.width="960px"; canvas.style.height="540px";} loadingBar.style.display="block"; var script=document.createElement("script"); script.src=loaderUrl; script.onload=()=>{ createUnityInstance(canvas, config, (progress)=>{ progressBarFull.style.width=100 * progress + "%";}) .then((unityInstance)=>{ loadingBar.style.display="none"; fullscreenButton.onclick=()=>{ unityInstance.SetFullscreen(1);};}) .catch((message)=>{ alert(message);});}; document.body.appendChild(script); </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
