--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="" />
-    <meta
-      name="description"
-      content="Push down all the blocks in the minimum number of moves. Exciting? Hoo boy, you bet your sweet granddaddy it is."
-    />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-    />
-    <title>Hexahedral</title>
-    <script src="bundle.js" defer></script>
-
-    <style>
-      /* Prevent flash of unstyled content. */
-      body {
-        opacity: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <footer>
-      Push down all the blocks in the minimum number of moves.To move your cube
-      either use the arrow keys, or click on an adjacent pink or blue cube.
-    </footer>
-
-    <audio preload="auto" class="lose" src="audio/lose.mp3"></audio>
-    <audio preload="auto" class="move" src="audio/move.mp3"></audio>
-    <audio preload="auto" class="win" src="audio/win.mp3"></audio>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Hexahedral</title><script src="bundle.js" defer></script><style>body{ opacity: 0;} </style><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><footer>Push down all the blocks in the minimum number of moves.To move your cube either use the arrow keys, or click on an adjacent pink or blue cube. </footer><audio preload="auto" class="lose" src="audio/lose.mp3"></audio><audio preload="auto" class="move" src="audio/move.mp3"></audio><audio preload="auto" class="win" src="audio/win.mp3"></audio><script src="pwa.js"></script><script src="toast.js"></script></body></html>
