--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Hextris</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui"
-    />
-    <link rel="icon" type="image/png" href="favicon.ico" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="style/fa/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
-    <script type="text/javascript" src="js/hammer.min.js"></script>
-    <script type="text/javascript" src="js/js.cookie.js"></script>
-    <script type="text/javascript" src="js/jsonfn.min.js"></script>
-    <script type="text/javascript" src="js/keypress.min.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/sweet-alert.min.js"></script>
-    <script type="text/javascript" src="js/hextris-lite.js"></script>
-  </head>
-  <body>
-    <canvas id="canvas"></canvas>
-    <div id="overlay" class="faded overlay"></div>
-    <div id="startBtn"></div>
-    <div id="helpScreen" class="unselectable">
-      <div id="inst_main_body"></div>
-    </div>
-    <img id="openSideBar" class="helpText" src="./images/btn_help.svg" />
-    <div class="faded overlay"></div>
-    <img id="pauseBtn" src="./images/btn_pause.svg" />
-    <img id="restartBtn" src="./images/btn_restart.svg" />
-    <div id="HIGHSCORE">HIGH SCORE</div>
-    <div id="highScoreInGameText">
-      <div id="highScoreInGameTextHeader">HIGH SCORE</div>
-      <div id="currentHighScore">10292</div>
-    </div>
-    <div id="gameoverscreen">
-      <div id="container">
-        <div id="gameOverBox" class="GOTitle">GAME OVER</div>
-        <div id="cScore">1843</div>
-        <div id="highScoresTitle" class="GOTitle">HIGH SCORES</div>
-        <div class="score">
-          <span class="scoreNum">1.</span>
-          <div id="1place" style="display: inline">0</div>
-        </div>
-        <div class="score">
-          <span class="scoreNum">2.</span>
-          <div id="2place" style="display: inline">0</div>
-        </div>
-        <div class="score">
-          <span class="scoreNum">3.</span>
-          <div id="3place" style="display: inline">0</div>
-        </div>
-      </div>
-      <div id="bottomContainer">
-        <img id="restart" src="./images/btn_restart.svg" height="57px" />
-        <div id="buttonCont"></div>
-      </div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Hextris</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" type="text/css" href="style/fa/css/font-awesome.min.css" /><link rel="stylesheet" type="text/css" href="style/style.css" /><script type="text/javascript" src="js/hammer.min.js"></script><script type="text/javascript" src="js/js.cookie.js"></script><script type="text/javascript" src="js/jsonfn.min.js"></script><script type="text/javascript" src="js/keypress.min.js"></script><script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/sweet-alert.min.js"></script><script type="text/javascript" src="js/hextris-lite.js"></script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas id="canvas"></canvas><div id="overlay" class="faded overlay"></div><div id="startBtn"></div><div id="helpScreen" class="unselectable"><div id="inst_main_body"></div></div><img id="openSideBar" class="helpText" src="./images/btn_help.svg" /><div class="faded overlay"></div><img id="pauseBtn" src="./images/btn_pause.svg" /><img id="restartBtn" src="./images/btn_restart.svg" /><div id="HIGHSCORE">HIGH SCORE</div><div id="highScoreInGameText"><div id="highScoreInGameTextHeader">HIGH SCORE</div><div id="currentHighScore">10292</div></div><div id="gameoverscreen"><div id="container"><div id="gameOverBox" class="GOTitle">GAME OVER</div><div id="cScore">1843</div><div id="highScoresTitle" class="GOTitle">HIGH SCORES</div><div class="score"><span class="scoreNum">1.</span><div id="1place" style="display: inline">0</div></div><div class="score"><span class="scoreNum">2.</span><div id="2place" style="display: inline">0</div></div><div class="score"><span class="scoreNum">3.</span><div id="3place" style="display: inline">0</div></div></div><div id="bottomContainer"><img id="restart" src="./images/btn_restart.svg" height="57px" /><div id="buttonCont"></div></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
