--- a/index.html
+++ b/index.html
@@ -1,89 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="cache-control" content="max-age=0" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta charset="UTF-8" />
-
-    <title>BIKE RACING 3</title>
-    <!-- Standardised web app manifest -->
-
-    <!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.00, minimum-scale=1.0, user-scalable=no, minimal-ui"
-    />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link
-      rel="apple-touch-icon"
-      sizes="256x256"
-      href="icon_256.png"
-      type="image/png"
-    />
-    <meta name="HandheldFriendly" content="true" />
-
-    <style type="text/css">
-      * {
-        padding: 0;
-        margin: 0;
-        color: 0;
-      }
-
-      html,
-      body {
-        color: 0;
-        touch-action: none;
-        -ms-touch-action: none;
-        background: 0x00;
-        overflow: hidden;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        background-color: black;
-      }
-
-      canvas {
-        touch-action-delay: none;
-        touch-action: none;
-        -ms-touch-action: none;
-      }
-
-      body {
-        font-family: Arial, sans-serif;
-      }
-    </style>
-  </head>
-
-  <body onload=" startGame();">
-    <div id="cont"></div>
-    <script src="game.min.js" type="text/javascript "></script>
-
-    <script type="text/javascript">
-      var game;
-
-      function startGame() {
-        /*
-            FBInstant.initializeAsync()
-              .then(function() {        
-                 // Start loading game assets here
-                 FBInstant.startGameAsync()
-                  .then(function() {
-            ready()
-            console.log("ready()");
-            Fbad.getInstance().showInterstitialAd();
-
-                          });
-
-            
-        });*/
-        ready();
-      }
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta charset="UTF-8" /><title>Hill Racing 3</title><meta name="apple-mobile-web-app-capable" content="yes" /><meta name="apple-mobile-web-app-status-bar-style" content="black" /><link rel="apple-touch-icon" sizes="256x256" href="icon_256.png" type="image/png" /><meta name="HandheldFriendly" content="true" /><style type="text/css">*{ padding: 0; margin: 0; color: 0;} html, body{ color: 0; touch-action: none; -ms-touch-action: none; background: 0x00; overflow: hidden; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-color: black;} canvas{ touch-action-delay: none; touch-action: none; -ms-touch-action: none;} body{ font-family: Arial, sans-serif;} </style><link rel="stylesheet" href="toast.css" /></head><body onload=" startGame();"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="cont"></div><script src="game.min.js" type="text/javascript "></script><script type="text/javascript">var game; function startGame(){ ready();} </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
