--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Jetpack Joyride</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="icon" href="splash.jpg" />
-    <meta
-      name="viewport"
-      content="width=device-width, height=device-height, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1"
-    />
-    <script type="text/javascript" src="engine/phaser-3.24.1.min.js"></script>
-    <script type="text/javascript" src="game3.js"></script>
-  </head>
-  <body>
-    <div class="fontLoader" style="font-family: jetpackia">-</div>
-    <img
-      id="rotate_image"
-      src="img/HB_ic_rotateScreen.png"
-      alt="rotate_screen"
-      class="center"
-    />
-    <div id="content">
-      <div id="phaser-canvas"></div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><title>Jetpack Joyride</title><link rel="stylesheet" type="text/css" href="css/styles.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script type="text/javascript" src="engine/phaser-3.24.1.min.js"></script><script type="text/javascript" src="game3.js"></script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div class="fontLoader" style="font-family: jetpackia">-</div><img id="rotate_image" src="img/HB_ic_rotateScreen.png" alt="rotate_screen" class="center" /><div id="content"><div id="phaser-canvas"></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
